tests/typing/bad/testfile-undef_var-3.c

int f(int x) { }
int main() { x; }

